# studio-haskell

./: .gitignore  Makefile  README.md
contabilidad/: README.md
oscillation/: Makefile  app.cabal  article.md  meta.yml
oscillation/src/: Lib.hs  Main.hs  Test.hs
pandoc/: Makefile  README.md
pandoc/article/: README.md  anexos.md  meta.yml  references.bib
pandoc/article/filters/: replace.lua
perceptron/: Makefile  README.md  app.cabal  meta.yml  perceptron.cabal
perceptron/app/: Main.hs
perceptron/data/: raw.tsv
perceptron/src/: Lib.hs  MyLib.hs
perceptron/test/: Main.hs
