cabal-version:   3.0
name:            app
version:         0.1

executable app
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base
                    , gloss

--$> cabal configure --enable-tests
test-suite app-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base
                    , tasty
                    , tasty-hunit
