cabal-version:  3.8
name:           app
version:        1.0

library
    exposed-modules:    Lib
    hs-source-dirs:     src
    build-depends:      base

test-suite app-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test,
                        src
    main-is:            Main.hs
    other-modules:      Lib
    build-depends:      base,
                        tasty,
                        tasty-hunit
