cabal-version:      3.0
name:               perceptron
version:            0.1.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

executable perceptron
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base,
        perceptron
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite perceptron-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        tasty,
        tasty-hunit,
        perceptron
